@@ -208,7 +208,8 @@ GS_EXPORT_CLASS
   uint16_t		portNum;	/* TCP port in host byte order.	*/
   SOCKET		listener;
   NSMapTable		*handles;	/* Handles indexed by socket.	*/
-  NSDictionary		*tlsopts;	/* TLS options */
+  NSDictionary		*tlscopts;	/* TLS client options */
+  NSDictionary		*tlssopts;	/* TLS server options */
 #if	defined(_WIN32)
   WSAEVENT              eventListener;
   NSMapTable            *events;
@@ -280,14 +281,27 @@ GS_EXPORT_CLASS
  * Setting nil (the default) means that TLS is not used.<br />
  * Setting an empty dictionary means that TLS is used with normal options.
  */
-+ (void) setOptionsForTLS: (NSDictionary*)opts;
++ (void) setClientOptionsForTLS: (NSDictionary*)opts;
+
+/** Sets the default options for use of TLS by socket ports.<br />
+ * Setting nil (the default) means that TLS is not used.<br />
+ * Setting an empty dictionary means that TLS is used with normal options.
+ */
++ (void) setServerOptionsForTLS: (NSDictionary*)opts;
 
 /** Overrides the default options for use of TLS by the receiver.<br />
  * Setting nil (the default) means that TLS is not used.<br />
  * Setting an empty dictionary means that TLS is used with normal options.<br />
  * This method has no effect on network sessions which are already established.
  */
-- (void) setOptionsForTLS: (NSDictionary*)opts;
+- (void) setClientOptionsForTLS: (NSDictionary*)opts;
+
+/** Overrides the default options for use of TLS by the receiver.<br />
+ * Setting nil (the default) means that TLS is not used.<br />
+ * Setting an empty dictionary means that TLS is used with normal options.<br />
+ * This method has no effect on network sessions which are already established.
+ */
+- (void) setServerOptionsForTLS: (NSDictionary*)opts;
 #endif
 @end
 
